Fix alignment of interest search form elements

--- a/htdocs/scss/skins/_nav.scss
+++ b/htdocs/scss/skins/_nav.scss
@@ -172,10 +172,14 @@ $nav-small-screen-header-height: 3em;
     .nav-search {
         input, select {
             margin: 0;
-            padding: 0;
+            padding: 1px .25em;
             height: auto;
             width: auto;
             display: inline-block;
+            font-size: 0.875rem;
+        }
+        input.button {
+            padding: 0 .5em;
         }
     }
 
